# coding

./: .gitignore  01_typedef_basics.c  02_struct_definition.c  03_pointer_basics.c  04_dynamic_memory.c  05_bitwise_power_of_two.c  06_bitmask_wrap.c  07_macro_ifdef.c  09_volatile_critical.c  10_circular_buffer_mini.c  LANGUAGE_COMPARISON.md  circular_buffer.c  dc.py  requirements.txt
coding_skill/: 00_function_pointer_basics.c  01_wrapper_pattern.c  02_adapter_pattern.c  03_wrapper_adapter_combined.c  04_callback_pattern.c  07_observer_pattern.c  08_strategy_pattern.c  10_event_queue.c  11_memory_pool.c  13_reference_counting.c  14_ring_buffer.c  15_linked_list.c  16_double_buffer.c  17_raii_pattern.c  (+10 more)
coding_skill_cpp/: 00_function_pointer_basics.cpp  01_wrapper_pattern.cpp  02_adapter_pattern.cpp  03_singleton_pattern.cpp  04_callback_pattern.cpp  05_state_machine.cpp  06_factory_pattern.cpp  07_observer_pattern.cpp  08_strategy_pattern.cpp  09_command_pattern.cpp  10_event_queue.cpp  11_memory_pool.cpp  12_object_pool.cpp  13_reference_counting.cpp  14_ring_buffer.cpp  15_linked_list.cpp  16_double_buffer.cpp  17_raii_pattern.cpp  18_semaphore_pattern.cpp  19_mutex_guard.cpp  20_lazy_initialization.cpp  21_cache_pattern.cpp  22_zero_copy.cpp  23_watchdog_pattern.cpp  24_retry_pattern.cpp  25_failsafe_pattern.cpp  26_hal_pattern.cpp  27_driver_interface.cpp  28_interrupt_handler.cpp  29_mock_object.cpp  30_assertion_pattern.cpp  31_tracing_pattern.cpp  CMakeLists.txt  Makefile  README.md  compile_all.bat  compile_simple.bat  quick_compile.bat  test_compile.bat
(+57 files in other folders)
